k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testapp1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testapp1
  template:
    metadata:
      labels:
        app: testapp1
    spec:
      containers:
        - name: my-spring-app
          image: 992382840179.dkr.ecr.us-east-1.amazonaws.com/hongtest/pipelinetest/testapp1:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: testapp1-service
spec:
  type: LoadBalancer
  selector:
    app: testapp1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
